# SupplementIQ

./: .env.backup  .env.example  .gitignore  .prettierignore 2  DATABASE_SECURITY_IMPLEMENTATION.md  JWT_SETUP 2.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIX_CHECKLIST.md  TODO.md  create-test-users 2.js  env.template  eslint.config.mjs  next.config 2.ts  next.config.ts  package-lock 2.json  package-lock.json  package.json  simple_test.sql  test-cache.js  test-dosage-calculation.js  test-rate-limit.js  test-simple-dosage.js  test_relationships.sql  tsconfig.json  vitest.config.ts
.husky/: commit-msg
backend/: .prettierignore  .prettierrc  eslint.config.mjs  index.ts  jest.config.js  package.json  test-cache-loading.js  tsconfig.json
config/: .clang-format  .golangci.yml  .lintstagedrc  .prettierignore  .prettierrc  commitlint.config.js  env.template  eslint.config.mjs  (+1 more)
src/tools/DailyUpdateService/: Cargo.toml  Makefile  README.md  build.sh  clippy.toml  run_tests.sh  rustfmt.toml
src/tools/DailyUpdateService/go-supabase/: README.md  go.mod  main.go  main_test.go
src/tools/DailyUpdateService/lib/core/: admin-cache.js  cache.js
src/tools/DailyUpdateService/lib/services/: file-autocomplete.js
src/tools/DailyUpdateService/src/: cache_manager.rs  config.rs  go_integration.rs  lib.rs
src/tools/DailyUpdateService/tests/: cache_tests.rs  comprehensive_cache_tests.rs  comprehensive_go_integration_tests.rs  comprehensive_product_data_tests.rs  comprehensive_service_tests.rs  go_integration_tests.rs  integration_tests.rs
(+1316 files in other folders)
