[package]
name = "daily-update-service"
version = "0.1.0"
edition = "2021"
authors = ["SupplementIQ Team"]
description = "Daily Update Service for SupplementIQ - Rust implementation with memory safety"

[[bin]]
name = "daily-update-service"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Go integration
reqwest = { version = "0.11", features = ["json"] }

# Database connectivity
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# File system operations
walkdir = "2.3"

# Concurrent data structures
dashmap = "5.5"

# Caching
moka = { version = "0.12", features = ["future"] }

# Process execution
which = "4.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"